--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,17 @@
 attrs==23.1.0
 Automat==22.10.0
-bleach==6.0.0
-certifi==2023.5.7
 cffi==1.15.1
-charset-normalizer==3.1.0
 click==8.1.3
-colorama==0.4.6
 constantly==15.1.0
 cryptography==41.0.1
--e git+ssh://git@github.com/Raphaelvddoel/2IC80.git@f21a51435cf7f6b6a89cdb8ef4cfd7802ba7dd6c#egg=CuckooByte
-docutils==0.20.1
 hyperlink==21.0.0
 idna==3.4
-importlib-metadata==6.6.0
 incremental==22.10.0
-jaraco.classes==3.2.3
-keyring==23.13.1
-markdown-it-py==2.2.0
-mdurl==0.1.2
-more-itertools==9.1.0
-pkginfo==1.9.6
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
 pycparser==2.21
-Pygments==2.15.1
 pyOpenSSL==23.2.0
-pywin32-ctypes==0.2.0
-readme-renderer==37.3
-requests==2.30.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.3.5
+python-nmap==0.7.1
 scapy==2.5.0
-service-identity==21.1.0
 six==1.16.0
-twine==4.0.2
 Twisted==22.10.0
-twisted-iocpsupport==1.0.3
 typing_extensions==4.6.3
-urllib3==2.0.2
-webencodings==0.5.1
-zipp==3.15.0
 zope.interface==6.0
